objects/ssot__ConvChannelEngmtSummarySubject__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ConvChannelEngmtSummaryId__c</fullName>
        <label>Conv Channel Engagement Summary</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Conv Channel Engmt Summary Subject Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectDescription__c</fullName>
        <label>Subject Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectId__c</fullName>
        <label>Subject</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658770221_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConvChannelEngmtSummarySubject_ConvC_rel</label>
        <referenceTo>ssot__ConvChannelEngagementSummary__dlm</referenceTo>
        <relationshipLabel>ConvChannelEngmtSummarySubject_ConvC_rel</relationshipLabel>
        <relationshipName>rel_1731658770221_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731659301272_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConvChannelEngmtSummarySubject_Subje_rel</label>
        <referenceTo>ssot__Subject__dlm</referenceTo>
        <relationshipLabel>ConvChannelEngmtSummarySubject_Subje_rel</relationshipLabel>
        <relationshipName>rel_1731659301272_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>